--- a/src/components/Form/FormStyles.css
+++ b/src/components/Form/FormStyles.css
@@ -27,7 +27,7 @@ h1 {
 
 .glass {
   width: 65%;
-  height: 550px;
+  height: 650px;
   padding: 2.5%;
   background: linear-gradient(
     to top left,
@@ -39,7 +39,7 @@ h1 {
   box-shadow: 5px 2px 2px rgba(122, 122, 122, 0.3);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(8, 1fr);
   justify-content: center;
   align-items: center;
   grid-template-areas:
@@ -47,7 +47,8 @@ h1 {
     "title title"
     "name number"
     "riot currentrank"
-    "highestrank currentrank"
+    "highestrank id"
+    "email email"
     "pay pay"
     "submit submit";
 }
@@ -105,21 +106,40 @@ h1 {
   height: 100%;
   width: 100%;
 }
+
+.form-id {
+  grid-area: id;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.form-email {
+  grid-area: email;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  width: 50%;
+}
+
 .form-pay {
   grid-area: pay;
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .form-submit {
   grid-area: submit;
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* 2 level starts */
-.glass .form-currentrank {
-  height: 50%;
-}
 
 .glass div h1,
 .glass div input,
@@ -205,7 +225,9 @@ h1 {
 .content-number,
 .content-riot,
 .content-currentrank,
-.content-highestrank {
+.content-highestrank,
+.content-id,
+.content-email {
   position: relative;
   bottom: -30px;
   left: 0;
@@ -262,6 +284,26 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 
+.form-id input:focus + .label-id .content-id,
+.form-id input:valid + .label-id .content-id {
+  position: relative;
+  left: 0;
+  bottom: -10px;
+  background: -webkit-linear-gradient(#f6f0ea, #f1dfd1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.form-email input:focus + .label-email .content-email,
+.form-email input:valid + .label-email .content-email {
+  position: relative;
+  left: 0;
+  bottom: -10px;
+  background: -webkit-linear-gradient(#f6f0ea, #f1dfd1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .form-name input:focus + .label-name::after,
 .form-name input:valid + .label-name::after {
   transform: translateX(0%);
@@ -284,6 +326,16 @@ h1 {
 
 .form-highestrank input:focus + .label-highestrank::after,
 .form-highestrank input:valid + .label-highestrank::after {
+  transform: translateX(0%);
+}
+
+.form-id input:focus + .label-id::after,
+.form-id input:valid + .label-id::after {
+  transform: translateX(0%);
+}
+
+.form-email input:focus + .label-email::after,
+.form-email input:valid + .label-email::after {
   transform: translateX(0%);
 }
 
